fix: white bar on top & bottom on mobile fixed - added blackish color

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -27,6 +27,6 @@
   --overflow-x: hidden;
 }
 
-html, body {
-  background-image: linear-gradient(to right, #001c42, #003366);
+body {
+  background-color: rgb(9, 13, 20);
 }
